--- a/index.html
+++ b/index.html
@@ -7,37 +7,35 @@
 <body>
     <section id="principal">
         <img id="i1" src="./images/Frankm.jpg">
-        <header>
-            <h1>Frank Ramos</h1>
+        <header id="hed">
+            <h1></h1>
         </header>
         <main>
-            <section id="secundario">
-                <p>
-                    Desarrollador Junior | Inversionista novato
-                </p>
-            </section>
+            <div id="secundario">
+            </div>
             <section id="botones">
-                <button id="b1"><a href="https://www.facebook.com/frank.ramos.9041/?locale=es_LA" target="_blank">Facebook</a></button>
-                <button><a href="https://www.tiktok.com/@frankramos5666" target="_blank">TikTok</a></button>
-                <button><a href="https://www.instagram.com/chinof1112/" target="_blank">Instagram</a></button>
-                <button><a href="https://github.com/FrankMRF" target="_blank">Github</a></button>
+                <a class="b2" href="https://www.facebook.com/frank.ramos.9041/?locale=es_LA" target="_blank">Facebook</a>
+                <a class="b2" href="https://www.tiktok.com/@frankramos5666" target="_blank">TikTok</a>
+                <a class="b2" href="https://www.instagram.com/chinof1112/" target="_blank">Instagram</a>
+                <a class="b2" href="https://github.com/FrankMRF" target="_blank">Github</a>
             </section>
             <section id="iconos">
-                <img src="./images/Icoface.png" href="https://www.facebook.com/frank.ramos.9041/?locale=es_LA" target="_blank">
-                <img src="./images/Icotik.png">
-                <img src="./images/Icoinsta.png">
-                <img src="./images/git.png"
+                <a href="https://www.facebook.com/frank.ramos.9041/?locale=es_LA" target="_blank"><img src="./images/Icoface.png"></a>
+                <a href="https://www.tiktok.com/@frankramos5666" target="_blank"><img src="./images/Icotik.png"></a>
+                <a href="https://www.instagram.com/chinof1112/" target="_blank"><img src="./images/Icoinsta.png"></a>
+                <a href="https://github.com/FrankMRF" target="_blank"><img src="./images/git.png"></a>
             </section>
         </main>
         <footer>
             <p>&copy; 2025. Todos los derechos reservados.</p>
             <nav>
-                <ul>
-                    <li><a href="politica.html">Política de Privacidad</a></li>
-                    <li><a href="terminos.html">Términos y Condiciones</a></li>
+                <ul id="lista">
+                    <li id="lis"><a href="politica.html" target="_blank">Política de Privacidad</a></li>
+                    <li><a href="terminos.html" target="_blank">Términos y Condiciones</a></li>
                 </ul>
             </nav>
         </footer>
     </section>
+    <script src="./app.js"></script>
 </body>
 </html>
