--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </section>
         </main>
         <footer>
-            <p>&copy; 2025. Todos los derechos reservados.</p>
+            <p id="parrafo">&copy; 2025. Todos los derechos reservados.</p>
             <nav>
                 <ul id="lista">
-                    <li id="lis"><a href="politica.html" target="_blank">Política de Privacidad</a></li>
+                    <li><a href="politica.html" target="_blank">Política de Privacidad</a></li>
                     <li><a href="terminos.html" target="_blank">Términos y Condiciones</a></li>
                 </ul>
             </nav>
